tests/snapshots/compile__wgsl_color_simplelight_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_control_simplelight1_ambient: f32,
    u_control_simplelight1_lightColor: vec4f,
    u_control_simplelight1_lightX: f32,
    u_control_simplelight1_lightY: f32,
    u_control_simplelight1_lightZ: f32,
    u_control_simplelight1_surfaceColor: vec4f,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn simplelight1_color(uv: vec2f) -> vec4f {
    let unpacked = (defaultUvMap(uv)).rgb * 2.0 - 1.0;
    let normal = unpacked / max(length(unpacked), 1e-4);
    let lamp = vec3f(u.u_control_simplelight1_lightX, u.u_control_simplelight1_lightY, u.u_control_simplelight1_lightZ);
    let lightDir = lamp / max(length(lamp), 1e-4);
    let diffuse = max(dot(normal, lightDir), 0.0);
    let surface = u.u_control_simplelight1_surfaceColor;
    let ambient = clamp(u.u_control_simplelight1_ambient, 0.0, 1.0);
    let lit = ambient + (1.0 - ambient) * diffuse;
    return vec4f(surface.rgb * (u.u_control_simplelight1_lightColor).rgb * lit, surface.a);
}

fn simplelight1_value(uv: vec2f) -> f32 {
    let unpacked = (defaultUvMap(uv)).rgb * 2.0 - 1.0;
    let normal = unpacked / max(length(unpacked), 1e-4);
    let lamp = vec3f(u.u_control_simplelight1_lightX, u.u_control_simplelight1_lightY, u.u_control_simplelight1_lightZ);
    let lightDir = lamp / max(length(lamp), 1e-4);
    let diffuse = max(dot(normal, lightDir), 0.0);
    return diffuse;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(simplelight1_value(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a));
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = simplelight1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
