tests/snapshots/compile__wgsl_color_wavefold_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_wavefold1_bias: f32,
    u_control_wavefold1_drive: f32,
    u_control_wavefold1_mix: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn wavefold1_output(uv: vec2f) -> vec4f {
    let color = unpremultiply(defaultUvMap(uv));
    let driven = (color.rgb - 0.5 + (u.u_control_wavefold1_bias)) * (u.u_control_wavefold1_drive);
    let folded = abs(floor_mod3(driven + 1.0, vec3f(4.0)) - 2.0) - 1.0;
    let result = mix(color.rgb, folded * 0.5 + 0.5, u.u_control_wavefold1_mix);
    return premultiply(vec4f(clamp(result, vec3f(0.0), vec3f(1.0)), color.a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return wavefold1_output(uv);
}
